pwrp-interface-orig/rt_net.h

#define rt_net_h
struct net_sMessage {
	pwr_tBoolean xdr;
	pwr_tUInt32 msn;
	pwr_tNodeId nid;
};
typedef struct net_sMessage net_sMessage;
struct net_sClassDef {
	pwr_tInt32 Editor;
	pwr_tInt32 Method;
	pwr_tUInt32 Flags;
	pwr_tUInt32 NumOfObjBodies;
	pwr_tInt32 PopEditor;
};
typedef struct net_sClassDef net_sClassDef;
struct net_sObjBodyDef {
	pwr_tStructName StructName;
	pwr_tUInt32 NumOfParams;
	pwr_tUInt32 Size;
	pwr_tUInt32 NextAix;
	pwr_tUInt32 Flags;
};
typedef struct net_sObjBodyDef net_sObjBodyDef;
struct net_sParam {
	net_sParInfo Info;
	pwr_tTypeId TypeRef;
};
typedef struct net_sParam net_sParam;
struct net_sOixLink {
	pwr_tObjectIx flink;
	pwr_tObjectIx blink;
};
typedef struct net_sOixLink net_sOixLink;
struct net_sGobject {
	pwr_tObjid oid;
	pwr_tClassId cid;
	cdh_sFamily f;
	net_sOixLink sib;
	pwr_tObjid soid;
	pwr_tUInt32 size;
	net_mGo flags;
};
typedef struct net_sGobject net_sGobject;
struct net_sGetObjectInfo {
	net_sMessage hdr;
	pwr_sAttrRef aref;
};
typedef struct net_sGetObjectInfo net_sGetObjectInfo;
struct net_sSetObjectInfoR {
	net_sMessage hdr;
	pwr_tUInt32 sts;
	pwr_sAttrRef aref;
};
typedef struct net_sSetObjectInfoR net_sSetObjectInfoR;
struct net_sSiblings {
	pwr_tObjectIx flink;
	pwr_tObjectIx newblink;
	pwr_tObjectIx blink;
	pwr_tObjectIx newflink;
};
typedef struct net_sSiblings net_sSiblings;
struct net_sParent {
	pwr_tObjid oid;
	pwr_tObjid soid;
};
typedef struct net_sParent net_sParent;
struct net_sNotify {
	net_sMessage hdr;
	pwr_tObjid oid;
};
typedef struct net_sNotify net_sNotify;
struct net_sCreateObject {
	net_sNotify notify;
	net_sParent par;
	net_sSiblings sib;
};
typedef struct net_sCreateObject net_sCreateObject;
struct net_sDeleteObject {
	net_sNotify notify;
	net_sParent par;
	net_sSiblings sib;
};
typedef struct net_sDeleteObject net_sDeleteObject;
struct net_sMoveObject {
	net_sNotify notify;
	net_sOixLink sib;
	net_sParent opar;
	net_sSiblings osib;
	net_sParent npar;
	net_sSiblings nsib;
};
typedef struct net_sMoveObject net_sMoveObject;
struct net_sRenameObject {
	net_sNotify notify;
	cdh_sFamily f;
};
typedef struct net_sRenameObject net_sRenameObject;
struct net_sTime {
	u_int tv_sec;
	u_int tv_nsec;
};
typedef struct net_sTime net_sTime;
struct net_sGvolume {
	pwr_tVolumeId vid;
	pwr_tObjid oid;
	cdh_sObjName name;
	pwr_tClassId cid;
	pwr_tNodeId nid;
	net_sTime time;
};
typedef struct net_sGvolume net_sGvolume;
struct net_sGvolume7 {
	pwr_tVolumeId vid;
	pwr_tObjid oid;
	cdh_sObjName name;
	pwr_tClassId cid;
	pwr_tNodeId nid;
};
typedef struct net_sGvolume7 net_sGvolume7;
struct net_sMount {
	pwr_tVolumeId vid;
};
typedef struct net_sMount net_sMount;
struct net_sGattribute {
	net_sGobject ao;
	net_sParam ab;
};
typedef struct net_sGattribute net_sGattribute;
struct net_sGclass {
	net_sTime time;
	pwr_tBitMask dbsFlags;
	net_sGobject co;
	net_sClassDef cb;
	net_sGobject bo;
	net_sObjBodyDef bb;
	pwr_tUInt32 size;
	pwr_tUInt32 acount;
};
typedef struct net_sGclass net_sGclass;
struct net_sGetGclass {
	net_sMessage hdr;
	pwr_tUInt32 ver;
	pwr_tClassId cid;
	pwr_tUInt32 aidx;
};
typedef struct net_sGetGclass net_sGetGclass;
struct net_sCattribute {
	pwr_tAix aix;
	pwr_mAdef flags;
	pwr_eType type;
	pwr_tUInt32 offs;
	pwr_tUInt32 size;
	pwr_tUInt32 elem;
	pwr_tUInt32 moffset;
};
typedef struct net_sCattribute net_sCattribute;
struct net_sCclass {
	pwr_tClassId cid;
	net_sTime time;
	pwr_tUInt32 size;
	pwr_tUInt32 acount;
};
typedef struct net_sCclass net_sCclass;
struct net_sGetCclass {
	net_sMessage hdr;
	pwr_tUInt32 ver;
	pwr_tClassId cid;
	net_sTime time;
	pwr_tUInt32 aidx;
};
typedef struct net_sGetCclass net_sGetCclass;
struct net_sFileList {
	net_sMessage hdr;
	char dir[256];
	char pattern[40];
};
typedef struct net_sFileList net_sFileList;
struct net_sGetCircBuffer {
	net_sMessage hdr;
	pwr_sAttrRef circ_aref;
	pwr_tUInt32 resolution;
	pwr_tUInt32 samples;
	pwr_tUInt32 bufsize;
};
typedef struct net_sGetCircBuffer net_sGetCircBuffer;
struct net_sUpdateCircBuffer {
	net_sMessage hdr;
	pwr_tUInt32 info_size;
	pwr_sAttrRef circ_aref[10];
	pwr_tUInt32 resolution[10];
	pwr_tUInt32 samples[10];
	pwr_tUInt32 last_idx[10];
	pwr_tUInt32 offset[10];
	pwr_tUInt32 bufsize[10];
};
typedef struct net_sUpdateCircBuffer net_sUpdateCircBuffer;
extern  bool_t xdr_net_sGetObjectInfo (XDR *, net_sGetObjectInfo*);
extern  bool_t xdr_net_sSetObjectInfoR (XDR *, net_sSetObjectInfoR*);
extern  bool_t xdr_net_sSiblings (XDR *, net_sSiblings*);
extern  bool_t xdr_net_sParent (XDR *, net_sParent*);
extern  bool_t xdr_net_sNotify (XDR *, net_sNotify*);
extern  bool_t xdr_net_sCreateObject (XDR *, net_sCreateObject*);
extern  bool_t xdr_net_sDeleteObject (XDR *, net_sDeleteObject*);
extern  bool_t xdr_net_sMoveObject (XDR *, net_sMoveObject*);
extern  bool_t xdr_net_sRenameObject (XDR *, net_sRenameObject*);
extern  bool_t xdr_net_sTime (XDR *, net_sTime*);
extern  bool_t xdr_net_sGvolume (XDR *, net_sGvolume*);
extern  bool_t xdr_net_sGvolume7 (XDR *, net_sGvolume7*);
extern  bool_t xdr_net_sMount (XDR *, net_sMount*);
extern  bool_t xdr_net_sGattribute (XDR *, net_sGattribute*);
extern  bool_t xdr_net_sGclass (XDR *, net_sGclass*);
extern  bool_t xdr_net_sGetGclass (XDR *, net_sGetGclass*);
extern  bool_t xdr_net_sCattribute (XDR *, net_sCattribute*);
extern  bool_t xdr_net_sCclass (XDR *, net_sCclass*);
extern  bool_t xdr_net_sGetCclass (XDR *, net_sGetCclass*);
extern  bool_t xdr_net_sFileList (XDR *, net_sFileList*);
extern  bool_t xdr_net_sGetCircBuffer (XDR *, net_sGetCircBuffer*);
extern  bool_t xdr_net_sUpdateCircBuffer (XDR *, net_sUpdateCircBuffer*);
extern bool_t xdr_net_sGetObjectInfo ();
extern bool_t xdr_net_sSetObjectInfoR ();
extern bool_t xdr_net_sSiblings ();
extern bool_t xdr_net_sParent ();
extern bool_t xdr_net_sNotify ();
extern bool_t xdr_net_sCreateObject ();
extern bool_t xdr_net_sDeleteObject ();
extern bool_t xdr_net_sMoveObject ();
extern bool_t xdr_net_sRenameObject ();
extern bool_t xdr_net_sTime ();
extern bool_t xdr_net_sGvolume ();
extern bool_t xdr_net_sGvolume7 ();
extern bool_t xdr_net_sMount ();
extern bool_t xdr_net_sGattribute ();
extern bool_t xdr_net_sGclass ();
extern bool_t xdr_net_sGetGclass ();
extern bool_t xdr_net_sCattribute ();
extern bool_t xdr_net_sCclass ();
extern bool_t xdr_net_sGetCclass ();
extern bool_t xdr_net_sFileList ();
extern bool_t xdr_net_sGetCircBuffer ();
extern bool_t xdr_net_sUpdateCircBuffer ();