pwrp-interface-orig/rt_net_h.ads


   function xdr_net_sGetObjectInfo (arg1 : access rpc_xdr_h.XDR; arg2 : access net_sGetObjectInfo) return rpc_types_h.bool_t;  -- rt_net.h:855
   pragma Import (C, xdr_net_sGetObjectInfo, "xdr_net_sGetObjectInfo");

   function xdr_net_sSetObjectInfoR (arg1 : access rpc_xdr_h.XDR; arg2 : access net_sSetObjectInfoR) return rpc_types_h.bool_t;  -- rt_net.h:856
   pragma Import (C, xdr_net_sSetObjectInfoR, "xdr_net_sSetObjectInfoR");

   function xdr_net_sSiblings (arg1 : access rpc_xdr_h.XDR; arg2 : access net_sSiblings) return rpc_types_h.bool_t;  -- rt_net.h:857
   pragma Import (C, xdr_net_sSiblings, "xdr_net_sSiblings");

   function xdr_net_sParent (arg1 : access rpc_xdr_h.XDR; arg2 : access net_sParent) return rpc_types_h.bool_t;  -- rt_net.h:858
   pragma Import (C, xdr_net_sParent, "xdr_net_sParent");

   function xdr_net_sNotify (arg1 : access rpc_xdr_h.XDR; arg2 : access net_sNotify) return rpc_types_h.bool_t;  -- rt_net.h:859
   pragma Import (C, xdr_net_sNotify, "xdr_net_sNotify");

   function xdr_net_sCreateObject (arg1 : access rpc_xdr_h.XDR; arg2 : access net_sCreateObject) return rpc_types_h.bool_t;  -- rt_net.h:860
   pragma Import (C, xdr_net_sCreateObject, "xdr_net_sCreateObject");

   function xdr_net_sDeleteObject (arg1 : access rpc_xdr_h.XDR; arg2 : access net_sDeleteObject) return rpc_types_h.bool_t;  -- rt_net.h:861
   pragma Import (C, xdr_net_sDeleteObject, "xdr_net_sDeleteObject");

   function xdr_net_sMoveObject (arg1 : access rpc_xdr_h.XDR; arg2 : access net_sMoveObject) return rpc_types_h.bool_t;  -- rt_net.h:862
   pragma Import (C, xdr_net_sMoveObject, "xdr_net_sMoveObject");

   function xdr_net_sRenameObject (arg1 : access rpc_xdr_h.XDR; arg2 : access net_sRenameObject) return rpc_types_h.bool_t;  -- rt_net.h:863
   pragma Import (C, xdr_net_sRenameObject, "xdr_net_sRenameObject");

   function xdr_net_sTime (arg1 : access rpc_xdr_h.XDR; arg2 : access net_sTime) return rpc_types_h.bool_t;  -- rt_net.h:864
   pragma Import (C, xdr_net_sTime, "xdr_net_sTime");

   function xdr_net_sGvolume (arg1 : access rpc_xdr_h.XDR; arg2 : access net_sGvolume) return rpc_types_h.bool_t;  -- rt_net.h:865
   pragma Import (C, xdr_net_sGvolume, "xdr_net_sGvolume");

   function xdr_net_sGvolume7 (arg1 : access rpc_xdr_h.XDR; arg2 : access net_sGvolume7) return rpc_types_h.bool_t;  -- rt_net.h:866
   pragma Import (C, xdr_net_sGvolume7, "xdr_net_sGvolume7");

   function xdr_net_sMount (arg1 : access rpc_xdr_h.XDR; arg2 : access net_sMount) return rpc_types_h.bool_t;  -- rt_net.h:867
   pragma Import (C, xdr_net_sMount, "xdr_net_sMount");

   function xdr_net_sGattribute (arg1 : access rpc_xdr_h.XDR; arg2 : access net_sGattribute) return rpc_types_h.bool_t;  -- rt_net.h:868
   pragma Import (C, xdr_net_sGattribute, "xdr_net_sGattribute");

   function xdr_net_sGclass (arg1 : access rpc_xdr_h.XDR; arg2 : access net_sGclass) return rpc_types_h.bool_t;  -- rt_net.h:869
   pragma Import (C, xdr_net_sGclass, "xdr_net_sGclass");

   function xdr_net_sGetGclass (arg1 : access rpc_xdr_h.XDR; arg2 : access net_sGetGclass) return rpc_types_h.bool_t;  -- rt_net.h:870
   pragma Import (C, xdr_net_sGetGclass, "xdr_net_sGetGclass");

   function xdr_net_sCattribute (arg1 : access rpc_xdr_h.XDR; arg2 : access net_sCattribute) return rpc_types_h.bool_t;  -- rt_net.h:871
   pragma Import (C, xdr_net_sCattribute, "xdr_net_sCattribute");

   function xdr_net_sCclass (arg1 : access rpc_xdr_h.XDR; arg2 : access net_sCclass) return rpc_types_h.bool_t;  -- rt_net.h:872
   pragma Import (C, xdr_net_sCclass, "xdr_net_sCclass");

   function xdr_net_sGetCclass (arg1 : access rpc_xdr_h.XDR; arg2 : access net_sGetCclass) return rpc_types_h.bool_t;  -- rt_net.h:873
   pragma Import (C, xdr_net_sGetCclass, "xdr_net_sGetCclass");

   function xdr_net_sFileList (arg1 : access rpc_xdr_h.XDR; arg2 : access net_sFileList) return rpc_types_h.bool_t;  -- rt_net.h:874
   pragma Import (C, xdr_net_sFileList, "xdr_net_sFileList");

   function xdr_net_sGetCircBuffer (arg1 : access rpc_xdr_h.XDR; arg2 : access net_sGetCircBuffer) return rpc_types_h.bool_t;  -- rt_net.h:875
   pragma Import (C, xdr_net_sGetCircBuffer, "xdr_net_sGetCircBuffer");

   function xdr_net_sUpdateCircBuffer (arg1 : access rpc_xdr_h.XDR; arg2 : access net_sUpdateCircBuffer) return rpc_types_h.bool_t;  -- rt_net.h:876
   pragma Import (C, xdr_net_sUpdateCircBuffer, "xdr_net_sUpdateCircBuffer");

end rt_net_h;
